# gridpointer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  performance-test.sh  setup-arch.sh
benchmarks/: motion_bench.rs
examples/: dash_demo.rs  grid_demo.rs  gridpointer.service
src/: config.rs  error.rs  input.rs  lib.rs  main.rs  motion.rs  wl.rs
tests/: config_tests.rs  motion_tests.rs
